--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,9 @@
 @charset "UTF-8";
-
 .hidden {
     display: none;
 }
 .sitecontainer{
-    max-width: 100%;
+  width: 100%;
   }
 body{
   font-family: Arial, Helvetica sans-serif;
@@ -24,6 +23,15 @@ p{
 }
 #active{
   text-decoration: underline;
+}
+.hero {
+     max-width: 100%;
+     block-size: auto;
+     margin-top: 2vh;
+}
+
+.hero img{
+  max-width: 100%;
 }
 	/* ----------------------------------------------------------MOBILE START ---------------------------------------------------*/
 	.ncontent{
@@ -120,7 +128,9 @@ p{
   background-color: grey;
   border-radius: 25px;
   padding: 10px;
-  margin: 25px 10px 25px 10px;
+  margin: 25px auto 25px auto;
+  width: 70%;
+  align-items: center;
 }
 .contactform form{
 	justify-content: space-around;
@@ -146,9 +156,56 @@ input[type=text], select, textarea, #submit {
 
 /* ----------------------------------------------------------CONTACT END ---------------------------------------------------*/
 
-/* ----------------------------------------------------------ABOUT US START ---------------------------------------------------*/
+/* ----------------------------------------------------------ABOUT START ---------------------------------------------------*/
 
-/* ----------------------------------------------------------ABOUT US END ---------------------------------------------------*/
+.slides{
+	max-width: 100%;
+	max-width: 250px;
+	max-height: 250px;
+	overflow: hidden;
+	border-radius: 40px;
+}
+
+.slides img{
+	max-height: 250px;
+	max-width: 250px;
+	margin-right: 250px;
+
+}
+
+.personpictures{
+  width:3000px;
+	position: relative;
+	transition: all 2s ease;
+  margin-right: 20px;
+}
+
+.about{
+  margin-top: 50px;
+  width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.about h2, p{
+  display: block;
+  align-items: center;
+}
+
+.textarea h2{
+  font-size: 5vw;
+}
+.textarea p{
+  font-size: 3vw;
+}
+#teammembers{
+  width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+/* ----------------------------------------------------------ABOUT END ---------------------------------------------------*/
 
 /* ----------------------------------------------------------FOOTER MOBILE START -------------------------------------------------*/
 .footernav ul li{
@@ -160,6 +217,7 @@ flex-direction: row;
 justify-content: space-around;
 max-width: 100%;
 height: 50px;
+margin-top: 50px;
 background-color: #000000;
 }
 /* ----------------------------------------------------------FOOTER END ---------------------------------------------------*/
@@ -220,6 +278,115 @@ background-color: #000000;
   transition: 2s ease;
 }
 
+h2{
+font-size: 5vw;
+}
+h3{
+  font-size: 4vw;
+  margin-bottom: 10px;
+}
+
+p{
+  font-size: 1.5vw;
+}
+
+.ncontent button{
+display: none;
+}
+
+.ncontent img{
+max-width: 100%;
+}
+
+.ncontent{
+max-width: 100%;
+justify-content: center;
+background-color: #fff;
+}
+.ncontent img{
+max-height: 150px;
+}
+#menucontent{
+display: contents;
+
+}
+
+.mainnav{
+display: flex;
+flex-direction: column;
+}
+#hamburgermenu{
+display: flex;
+flex-direction: row;
+justify-content: space-around;
+background-color: #000000;
+margin-top: 25px;
+}
+
+#mainnav li a{
+color: #fff;
+}
+
+#mainnav a:hover{
+color: red;
+transition: 2s ease;
+}
+
+/* ----------------------------------------------------------ABOUT START ---------------------------------------------------*/
+
+.textarea{
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+.about{
+outline: 2px black;
+height: 800px;
+max-width: 1500px;
+max-height: 600px;
+}
+
+.slides{
+min-width: 500px;
+min-height: 500px;
+margin: 100px auto 40px auto;
+overflow: hidden;
+justify-content: space-around;
+border-radius: 40px;
+}
+.slides img {
+min-width: 500px;
+min-height: 500px;
+margin-right: 0px;
+}
+
+.personpictures{
+width:3000px;
+position: relative;
+transition: all 2s ease;
+margin-right: 20px;
+
+}
+
+.about{
+margin-left: auto;
+margin-right: auto;
+	display: flex;
+	flex-direction: column;
+	align-content: center;
+}
+#teammembers{
+  width: 100%;
+	justify-content: space-around;
+  margin-top: 30%;
+  align-items: center;
+}
+
+#teammembers button{
+  width: 14vw;
+  height: 4vw;
+}
+/* ----------------------------------------------------------ABOUT END ---------------------------------------------------*/
 
 
 }
