--- a/css/main.css
+++ b/css/main.css
@@ -6,16 +6,23 @@
   width: 100%;
   }
 body{
-  font-family: Arial, Helvetica sans-serif;
+  font-family: sofia-pro,sans-serif;
+  font-weight: 300;
+  font-style: normal;
 }
 
 h2{
-font-size: 1.23vw;
-font-weight: 400;
+	font-family: brother-1816,sans-serif;
+	font-weight: 200;
+	font-style: normal;
+
 }
 h3{
   font-size: 4.5vw;
   margin-bottom: 10px;
+  font-family: brother-1816,sans-serif;
+  font-weight: 200;
+  font-style: normal;
 }
 
 p{
@@ -33,6 +40,20 @@ p{
 .hero img{
   max-width: 100%;
 }
+button{
+	border-radius: 15px;
+	border-color: #78A884;
+	background-color: #78A884;
+
+}
+.person{
+	font-size: 1vw;
+	font-family: brother-1816,sans-serif;
+	font-weight: 200;
+	font-style: normal;
+}
+
+
 	/* ----------------------------------------------------------MOBILE START ---------------------------------------------------*/
 	.ncontent{
 	  max-width: 100%;
@@ -41,7 +62,7 @@ p{
 		flex-direction: row;
 		justify-content: space-between;
 		padding: 2em;
-		background-color: #000000;
+		background-color: ;
 	  	}
 .ncontent img{
   max-width: 30%;
@@ -53,7 +74,7 @@ p{
 	  		height: 20px;
 	  		width: 20px;
 	  		border: 2px;
-				border-color: #000000;
+				border-color:;
 	  		transition: all 300ms ease;
 	  	}
 
@@ -69,7 +90,7 @@ p{
 	  	#mainnav li a
 	  	{
 	  		display: block;
-	  		color: #000000;
+	  		color:;
 	  		padding: 20px 0 20px 0;
 	  		text-align: center;
 	  		width: 100%;
@@ -104,6 +125,7 @@ p{
 	  height: 30px;
 	  margin-top: 20px;
 	  right: 20px;
+	  
 	}
 
 	.mainnav ul li{
@@ -125,7 +147,7 @@ p{
 /* ---------------------------------------------------------CONTACT START ---------------------------------------------------*/
 .contactform{
 	margin-top: 25px;
-  background-color: grey;
+  background-color: #78A884;
   border-radius: 25px;
   padding: 10px;
   margin: 25px auto 25px auto;
@@ -147,7 +169,7 @@ input[type=text], select, textarea, #submit {
 	margin: auto;
 	margin-top: 10px;
 	padding: 10px;
-  border: 1px solid #000000;
+  border: 1px solid #78A884;
   border-radius: 5px;
 }
 #submit{
@@ -218,7 +240,7 @@ justify-content: space-around;
 max-width: 100%;
 height: 50px;
 margin-top: 50px;
-background-color: #000000;
+background-color: #78A884;
 }
 /* ----------------------------------------------------------FOOTER END ---------------------------------------------------*/
 
@@ -265,7 +287,7 @@ background-color: #000000;
 	display: flex;
 	flex-direction: row;
   justify-content: space-around;
-  background-color: #000000;
+  background-color: #78A884;
   margin-top: 25px;
 }
 
@@ -319,7 +341,7 @@ flex-direction: column;
 display: flex;
 flex-direction: row;
 justify-content: space-around;
-background-color: #000000;
+background-color: #78A884;
 margin-top: 25px;
 }
 
