--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ button{
 		flex-direction: row;
 		justify-content: space-between;
 		padding: 2em;
-		background-color: ;
+		/*background-color: ;*/
 	  	}
 .ncontent img{
   max-width: 30%;
@@ -74,7 +74,7 @@ button{
 	  		height: 20px;
 	  		width: 20px;
 	  		border: 2px;
-				border-color:;
+			/*	border-color:;*/
 	  		transition: all 300ms ease;
 	  	}
 
@@ -90,7 +90,7 @@ button{
 	  	#mainnav li a
 	  	{
 	  		display: block;
-	  		color:;
+	  		/*color:;*/
 	  		padding: 20px 0 20px 0;
 	  		text-align: center;
 	  		width: 100%;
@@ -143,6 +143,132 @@ button{
     transition: 2s ease;
   }
 	/* ----------------------------------------------------------NAV END -------------------------------------------------*/
+
+
+	/*-----------------------------------------------------------Index Start----------------------------------------------*/
+
+	.container{
+		display: flex;
+		background-color:#195040;
+		color: #fff;
+		margin: 2em 1em 2em 1em;
+		justify-content:left;
+		padding: 3em;
+		align-items:center; 
+	}
+	
+	.component1{
+		height: 280px;
+		flex: 40%;
+	}
+	
+	.component2{
+		height: 280px;
+		display: flex;
+		flex-direction: column;
+	}
+	
+	.component2_1{
+		padding: 7%;
+		flex: 40%;
+	}
+	
+	.component2_2{
+		flex: 30%;
+		padding-left: 35%;
+	}
+	
+	.component3{
+		flex: 40%;
+	}
+	
+	.paragraph_{
+		display: flex;
+		flex-flow: row wrap;
+		width: 400px;
+		margin-left: 5em;
+	}
+	
+	.container_por {
+		flex-direction: column;
+	}
+	
+	.container_but {
+		flex-direction: column;
+		justify-content: center;
+		padding-left: 46%;
+		margin-top: 4%;
+	}
+	
+	
+	.readMore_btn{
+		background-color: #c39974;
+		border: none;
+		border-radius: 40px;
+		color: white;
+		padding: 15px 32px;
+		font-size: 1.0em;
+		cursor: pointer;
+	  }
+	
+	  .read_more{
+		background-color: #c39974;
+		border: none;
+		border-radius: 40px;
+		color: white;
+		padding: 10px 30px;
+		font-size: 1.0em;
+		box-shadow: 0px 0px 10px 0px #9c8e70;
+		cursor: pointer;
+	  }
+	  
+	  .read_more:hover{
+		box-shadow: none;
+		background-color: rgba(109, 80, 0, 0.966);
+		color: #fff;
+		transition: cubic-bezier(0.075, 0.82, 0.165, 1) 3.05s;
+	  }
+	  
+	  .readMore_btn:hover {
+		box-shadow: none;
+		background-color:  rgba(109, 80, 0, 0.966);
+		color: #fff;
+		transition: cubic-bezier(0.075, 0.82, 0.165, 1) 3.05s;
+		padding: 10px;
+	  }
+
+	  /*---------------------------------------------------INDEX END---------------------------------------------------------*/
+
+
+	  /*----------------------------------------------------portfolio--------------------------------------------------------*/
+	  .container_por{
+		display: flex;
+		flex-direction: row;
+		background-color: rgb(0, 48, 37);
+		color: #fff;
+		margin: 2em 1em 2em 1em;
+		/*justify-content:left;*/
+		padding: 3em;
+		align-items:center; 
+		padding-left: 16%;
+	}
+	
+	.container_por_col{
+		display: flex;
+		flex-direction: column;
+	}
+
+	.container_vid{
+		display: flex;
+		flex-direction: row;
+		background-color:#9c8e70;
+		color: #fff;
+		justify-content:center;
+		padding: 3em;
+		align-items:center; 
+		padding-left: 26%;
+	}
+
 
 /* ---------------------------------------------------------CONTACT START ---------------------------------------------------*/
 .contactform{
@@ -238,10 +364,19 @@ display: flex;
 flex-direction: row;
 justify-content: space-around;
 max-width: 100%;
-height: 50px;
+/*height: 50px;*/
 margin-top: 50px;
 background-color: #78A884;
 }
+
+.textFoot{
+	color: rgb(221, 221, 221);
+	padding: 3%;
+	font-size: 0.3vw;
+	text-align:center;
+}
+
+
 /* ----------------------------------------------------------FOOTER END ---------------------------------------------------*/
 
 /* ----------------------------------------------------------TABLET AND WEB START ---------------------------------------------------*/
@@ -309,7 +444,7 @@ h3{
 }
 
 p{
-  font-size: 1.5vw;
+  font-size: 1.3vw;
 }
 
 .ncontent button{
@@ -407,6 +542,17 @@ margin-right: auto;
 #teammembers button{
   width: 14vw;
   height: 4vw;
+}
+
+.container_vid{
+	display: flex;
+	flex-direction: row;
+	background-color:#9c8e70;
+	color: #fff;
+	/*justify-content:left;*/
+	padding: 1em;
+	align-items:center; 
+	
 }
 /* ----------------------------------------------------------ABOUT END ---------------------------------------------------*/
 
