--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,8 @@ button{
 }
 
 
+
+
 	/* ----------------------------------------------------------MOBILE START ---------------------------------------------------*/
 	.ncontent{
 	  max-width: 100%;
@@ -62,7 +64,7 @@ button{
 		flex-direction: row;
 		justify-content: space-between;
 		padding: 2em;
-		/*background-color: ;*/
+    background-color: #e2e2e2;
 	  	}
 .ncontent img{
   max-width: 30%;
@@ -74,7 +76,6 @@ button{
 	  		height: 20px;
 	  		width: 20px;
 	  		border: 2px;
-			/*	border-color:;*/
 	  		transition: all 300ms ease;
 	  	}
 
@@ -90,7 +91,6 @@ button{
 	  	#mainnav li a
 	  	{
 	  		display: block;
-	  		/*color:;*/
 	  		padding: 20px 0 20px 0;
 	  		text-align: center;
 	  		width: 100%;
@@ -111,13 +111,13 @@ button{
 	  		flex-direction: column;
 	  		align-items: center;
 			background-color: #78A884;
-			
+
 	  	}
 
-			
-			
-	
-	
+
+
+
+
 
 /* ----------------------------------------------------------NAV START -------------------------------------------------*/
 	.mainnav{
@@ -132,7 +132,7 @@ button{
 	  height: 30px;
 	  margin-top: 20px;
 	  right: 20px;
-	  
+
 	}
 
 	.mainnav ul li{
@@ -161,59 +161,59 @@ button{
 		margin: 2em 1em 2em 1em;
 		justify-content:left;
 		padding: 3em;
-		align-items:center; 
+		align-items:center;
 		font-size: 1vw;
-		
+
 	}
-	
+
 	.component1{
 		height: 280px;
 		flex: 40%;
 	}
-	
+
 	.component2{
 		height: 280px;
 		display: flex;
 		flex-direction: column;
 	}
-	
+
 	.component2_1{
 		padding: 7%;
 		flex: 40%;
 	}
-	
+
 	.component2_2{
 		flex: 30%;
 		padding-left: 35%;
 	}
-	
+
 	.component3{
 		flex: 40%;
 	}
 
 	.component1 img {width: 250px;
-	background-color: #fff; 
+	background-color: #fff;
 padding: 10px;}
-	
+
 	.paragraph_{
 		display: flex;
 		flex-flow: row wrap;
 		width: 400px;
 		margin-left: 5em;
 	}
-	
+
 	.container_por {
 		flex-direction: column;
 	}
-	
+
 	.container_but {
 		flex-direction: column;
 		justify-content: center;
 		padding-left: 46%;
 		margin-top: 4%;
 	}
-	
-	
+
+
 	.readMore_btn{
 		background-color: #c39974;
 		border: none;
@@ -223,7 +223,7 @@ padding: 10px;}
 		font-size: 1.0em;
 		cursor: pointer;
 	  }
-	
+
 	  .read_more{
 		background-color: #c39974;
 		border: none;
@@ -234,14 +234,14 @@ padding: 10px;}
 		box-shadow: 0px 0px 10px 0px #9c8e70;
 		cursor: pointer;
 	  }
-	  
+
 	  .read_more:hover{
 		box-shadow: none;
 		background-color: rgba(109, 80, 0, 0.966);
 		color: #fff;
 		transition: cubic-bezier(0.075, 0.82, 0.165, 1) 3.05s;
 	  }
-	  
+
 	  .readMore_btn:hover {
 		box-shadow: none;
 		background-color:  rgba(109, 80, 0, 0.966);
@@ -259,30 +259,29 @@ padding: 10px;}
 		flex-direction: row;
 		background-color:#53725b;
 		color: #fff;
-	
-		/*justify-content:left;*/
+		justify-content: space-between;
+    padding: 3vw;
 
-		align-items:center; 
-		padding-left: 10%;
-		
-		
+
 	}
 	.port{
-		font-size: 40px;
+		font-size: 6vw;
 		padding-left: 13px;
 		padding-top: 13px;
 		padding-bottom: 13px;
 	}
-	
+
 	.container_por_col{
 		display: flex;
 		flex-direction: column;
 	}
-	.container_por img {
-		max-width: 100%;	
-		
-		
-	}
+  .container_por img{
+    max-height: 500px;
+    max-width: 500px;
+    max-width: 100%;
+  }
+
+
 	.container_vid{
 		display: flex;
 		flex-direction: row;
@@ -290,9 +289,9 @@ padding: 10px;}
 		color: #fff;
 		justify-content:center;
 		padding: 3em;
-		align-items:center; 
+		align-items:center;
 		padding-left: 26%;
-		
+
 	}
 	.container_vid video {width:100%;}
 
@@ -352,7 +351,7 @@ input[type=text], select, textarea, #submit {
   width:3000px;
 	position: relative;
 	transition: all 2s ease;
-  margin-right: 20px;	
+  margin-right: 20px;
 }
 
 .about{
@@ -361,9 +360,19 @@ input[type=text], select, textarea, #submit {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	
+
 }
 
+#entryname{
+  margin-left: auto;
+  display: flex;
+  justify-content: center;
+}
+.about h2{
+  margin-left: 35%;
+  width: 100%;
+  align-items: center;
+}
 .about h2, p{
   display: block;
   align-items: center;
@@ -405,7 +414,13 @@ background-color: #78A884;
 	text-align:center;
 }
 
-
+.footernav img{
+max-height: 250px;
+max-width: 100%;
+}
+.footernav p{
+  margin-left: 0px;
+}
 /* ----------------------------------------------------------FOOTER END ---------------------------------------------------*/
 
 /* ----------------------------------------------------------TABLET AND WEB START ---------------------------------------------------*/
@@ -582,8 +597,8 @@ margin-right: auto;
 	color: #fff;
 	/*justify-content:left;*/
 	padding: 1em;
-	align-items:center; 
-	
+	align-items:center;
+
 }
 /* ----------------------------------------------------------ABOUT END ---------------------------------------------------*/
 
